Fixed menu width jump after animating at tablet sizes
refs https://github.com/TryGhost/Team/issues/1149

- added fixed width of the main menu to the tablet-size media queries so it doesn't snap back to a smaller width after animating

--- a/ghost/admin/app/styles/layouts/main.css
+++ b/ghost/admin/app/styles/layouts/main.css
@@ -824,6 +824,11 @@
     .gh-nav {
         flex-basis: 280px;
     }
+
+    .gh-nav-main-enter-active,
+    .gh-nav-main-leave-active {
+        width: calc(280px - 1px);
+    }
 }
 
 /* Mobile Nav Menu (Slides out)
